--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
         "upgrade": "npx npm-check-updates@latest --target minor -u"
     },
     "dependencies": {
+        "@driscode/cs2-lib": "^5.8.1-driscode-18",
         "@protobuf-ts/runtime": "^2.9.4",
         "buffer": "^6.0.3",
         "crc-32": "^1.2.2"
-    },
-    "peerDependencies": {
-        "@kewaiigamer/cs2-lib": "^5.8.1-kewaii-2"
     },
     "devDependencies": {
         "@protobuf-ts/plugin": "^2.9.4",
