--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
         "typedoc": "^0.26.6",
         "typescript": "^5.5.4"
     },
-    "version": "3.0.0"
+    "version": "3.0.0-driscode-1"
 }
